# nlp-swiss-political-parties

./: .gitignore  README.md  ideas.drawio  nlp_political_parties.ipynb  pyproject.toml
data/: cross_party_ideas.csv  party_ideas_prediction.csv  party_programms.csv  unique_party_ideas.csv
data/raw/: DM.txt  FDP.txt  GLP.txt  GPS.txt  SP.txt  SVP.txt
